<resources>

    <string name="app_name">teleSUR</string>
    <string name="review_detail_name">Artículo</string>
    <string name="action_settings">Settings</string>
    <string name="video_detail_name">Lista de reproducción</string>


    <string name="placeholder_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec eleifend arcu, eu convallis nisi. Etiam bibendum, tellus nec ultricies suscipit, metus justo fringilla urna, non mollis tortor libero non enim. Mauris sit amet venenatis risus, at ullamcorper ligula. Maecenas adipiscing non odio ut hendrerit. Phasellus pharetra id sapien laoreet sagittis. Etiam mattis bibendum elit. Vestibulum rutrum a libero eget facilisis. Duis tempor quam velit, at viverra tellus faucibus ut. Mauris venenatis odio sed lorem dignissim, vitae tristique arcu sagittis.</string>
    <string name="placeholder_lorem_ipsum_short">ipsum</string>


    <!-- drawer_view  menu -->
    <string name="news">Noticias</string>
    <string name="videos">Videos</string>
    <string name="programas">Programas</string>
    <string name="review">Opinión</string>
    <string name="streaming">En Vivo</string>
    <string name="settings">Configuración</string>
    <string name="about">Acerca de</string>

    <!-- Tabs Menu News-->

    <string name="oustanding">Destacado</string>
    <string name="latam">América Latina</string>
    <string name="world">Mundo</string>
    <string name="sports">Deportes</string>
    <string name="culture">Cultura</string>

    <!-- Tabs Menu Videos -->

    <string name="news_videos">Noticias</string>
    <string name="interview_videos">Entrevistas</string>
    <string name="documental_videos">Documentales</string>
    <string name="infogra_videos">Infografias</string>
    <string name="specials_videos">Especiales</string>
    <string name="programs_videos">Programas</string>
    <string name="report_videos">Reportajes</string>

    <!-- Tabs Menu Opnión -->

    <string name="articles">Artículos</string>
    <string name="interview">Entrevistas</string>
    <string name="blogs">Blogs</string>

    <!-- Tabs Menu Streaming -->

    <string name="signal">Señal en Vivo</string>
    <string name="audio">Audio en Vivo</string>


    <string name="play_error_message">Impossible to play the video.</string>
    <string name="play_progressive_error_message">Impossible to play the progressive video.</string>

    <!-- About -->

    <string name="about_conditions">Condiciones de Servicio y Privacidad</string>
    <string name="about_read">Leer más sobre teleSUR</string>
    <string name="about_version">Versión 0.0.0</string>
    <string name="about_copyrigth">Copyrigth © 2015 teleSUR.</string>
    <string name="about_me">Hecho con amor en la Ciudad de México</string>


    <string name="progress_dialog_help">Descargando datos, espera un momento por favor.</string>

    <!---->

    <string name="video_engadment">En teleSUR nos preocupamos por darte las noticias al instante y brindarte el mejor contenido de video. </string>


    <string name="appbar_scrolling_custom_view_behavior" translatable="false">net.telesurtv.www.telesur.views.view.FixedScrollingViewBehavior</string>
    <string name="share_menu">compartir</string>


    <!-- settings-->

    <string name="settings_category_alerts">Alertas</string>
    <string name="pref_setting_notification_key">notifys</string>
    <string name="pref_settings_title">Configurar notificaciones</string>

    <string name="settings_category_help">Apoyo</string>
    <string name="pref_setting_evaluation_key">evaluation</string>
    <string name="pref_settings_title_evaluation">¿Te gusta teleSUR? Califica esta aplicación</string>

    <string name="settings_category_about">Acerca de</string>
    <string name="pref_setting_about_key">about</string>
    <string name="pref_settings_title_about">Acerca de teleSUR</string>

    <string name="pref_setting_privacity_key">privacity</string>
    <string name="pref_settings_title_privacity">Condiciones del servicio y Privacidad</string>

    <string name="pref_settings_read_key">read</string>
    <string name="pref_settings_title_read">Leer más sobre teleSUR</string>

    <string name="pref_title_notification">Configurar notificaciones</string>
    <string name="pref_title_about">Acerca de</string>
    <string name="pref_title_privacity">Privacidad</string>
    <string name="pref_title_read">Leér sobre teleSUR</string>


    <!--  messages -->

    <string name="not_internet_conection">En este momento no estas conectado</string>
    <string name="expected_error_token">Parece que ocurrio un error en el servidor. Inténtalo de nuevo.</string>
    <string name="expected_error_video">Parece que ocurrio un error en el servidor y no pudimos cargar el video en teleSUR inténtalo de nuevo más tarde.</string>
    <string name="expected_error_wifi">En este momento no estas conectado a internet. Inténtalo de nuevo más tarde.</string>
    <string name="loading_message">Cargando...</string>


</resources>
